--- a/src/components/LeftSidebar/SidebarContent.scss
+++ b/src/components/LeftSidebar/SidebarContent.scss
@@ -26,7 +26,7 @@
 			font-weight: 400;
 			color: var(--color-orange);
 			text-transform: uppercase;
-			letter-spacing: .5em;
+			letter-spacing: .1rem;
 			padding: 1rem 0.5rem;
 		}
 	}
