--- a/src/components/LeftSidebar/SidebarContent.scss
+++ b/src/components/LeftSidebar/SidebarContent.scss
@@ -4,9 +4,9 @@
 		}
 	}
 
-	.list-border-bottom {
-		border-bottom: 1px solid var(--theme-bg-offset);
-		padding-bottom: 0.6rem !important;
+	.menu-list-border-bottom {
+		height: 1px;
+		margin: 1rem 0 !important;
 	}
 
 	.list-border-left {
@@ -14,6 +14,21 @@
 		margin-left: .5rem;
 	}
 
+	.overline-menu {
+		font-size: 0.8rem;
+		font-weight: 400;
+		color: var(--color-orange);
+		text-transform: uppercase;
+		letter-spacing: .1rem;
+		padding: 0.3rem 0.5rem;
+		height: 49px;
+		display: flex;
+		align-items: center;
+
+		@media (max-width: 49.9em) {
+			padding: 0.3rem 1rem;
+		}
+	}
 
 	.nav-group {
 		padding: .3rem 0;
@@ -22,15 +37,6 @@
 			display: flex;
 		}
 		
-		.overline {
-			font-size: 0.8rem;
-			font-weight: 400;
-			color: var(--color-orange);
-			text-transform: uppercase;
-			letter-spacing: .1rem;
-			padding: 0.3rem 0.5rem 0.6rem;
-			line-height: 40px;
-		}
 	}
 
 	.nav-group .placeholder {
