--- a/src/components/LeftSidebar/SidebarContent.scss
+++ b/src/components/LeftSidebar/SidebarContent.scss
@@ -4,9 +4,16 @@
 		}
 	}
 
-	.menu-list-border-bottom {
-		height: 1px;
-		margin: 1rem 0 !important;
+	.menu-list-divider {
+		height: 40px;
+		display: flex;
+		align-items: center;
+
+		hr {
+			width: 100%;
+			margin: 0 !important;
+			height: 1px;
+		}
 	}
 
 	.list-border-left {
