--- a/src/components/ContributorList.astro
+++ b/src/components/ContributorList.astro
@@ -3,11 +3,11 @@ import { cachedFetch } from '../util-server';
 import UIString from './UIString.astro';
 
 export interface Props {
-	githubRepo?: `${string}/${string}`;
+	githubRepo?: `aziontech.docs`;
 }
 
-const { githubRepo = 'withastro/docs' } = Astro.props as Props;
-const contributorsLink = `https://github.com/${githubRepo}/graphs/contributors`;
+const { githubRepo = 'aziontech/docs' } = Astro.props as Props;
+const contributorsLink = `https://github.com/aziontech/docs/graphs/contributors`;
 
 const printError = (e: Error) =>
 	console.warn(`[error]  /src/components/ContributorList.astro\n         ${e?.message ?? e}`);
@@ -15,7 +15,7 @@ const printError = (e: Error) =>
 async function getContributors(repo: string, page = 1): Promise<{ login: string; id: number }[]> {
 	try {
 		const pageSize = 100;
-		const url = `https://api.github.com/repos/${repo}/contributors?per_page=${pageSize}&page=${page}`;
+		const url = `https://api.github.com/repos/aziontech/docs/contributors?per_page=${3}&page=${1}`;
 
 		const token = import.meta.env.PUBLIC_GITHUB_TOKEN;
 
@@ -40,7 +40,7 @@ async function getContributors(repo: string, page = 1): Promise<{ login: string;
 			);
 		}
 
-		// Fetch more contributors recursively if there are more than GitHub’s per-page response limit.
+		// Fetch more contributors recursively if there are more than GitHub's per-page response limit.
 		if (data.length === pageSize) {
 			const rest = await getContributors(repo, page + 1);
 			data.push(...rest);
@@ -54,13 +54,15 @@ async function getContributors(repo: string, page = 1): Promise<{ login: string;
 }
 
 const contributors = await getContributors(githubRepo);
+const filteredContributors = contributors.filter(contributor => contributor.login !== "robsongajunior" && contributor.login !== "lfsigreja");
+
 ---
 
 <!-- Thanks to @5t3ph for https://smolcss.dev/#smol-avatar-list! -->
 <div>
 	<ul class="avatar-list">
 		{
-			contributors.map((item) => (
+			filteredContributors.map((item) => (
 				<li>
 					<a href={`https://github.com/${item.login}`}>
 						<img
@@ -89,11 +91,11 @@ const contributors = await getContributors(githubRepo);
 
 <style>
 	.avatar-list {
-		--avatar-size: 3rem;
-		--avatar-overlap: -0.125em;
-		--avatar-row-spacing: 0.125em;
-		--avatar-outline-width: 1px;
-		--avatar-outline-offset: 0.08em;
+		--avatar-size: 2rem;
+		--avatar-overlap: -0.20em;
+		--avatar-row-spacing: 0.050em;
+		--avatar-outline-width: 0.8px;
+		--avatar-outline-offset: 0em;
 
 		display: flex;
 		flex-wrap: wrap;
