FIX: Same page links + button external

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -5,7 +5,7 @@ const { href, text } = Astro.props;
 const { variant = 'primary' } = Astro.props;
 ---
 
-<a class:list={[`btn-component btn-component-icon btn-component-${variant}`]} {href}>
+<a class:list={[`btn-component btn-component-icon btn-component-${variant}`]} {href} target="_blank" rel="noopener">
 	{text}
 	<i class="icon icon-right-arrow icon-animation-primary">
 		<svg width="7" height="11" viewBox="0 0 7 11" fill="none" xmlns="http://www.w3.org/2000/svg">
