FEAT: Top bar component

--- a/src/components/PageContent/PageContent.astro
+++ b/src/components/PageContent/PageContent.astro
@@ -74,7 +74,7 @@ const breadcrumbs = await getPageBreadcrumb(Astro, lang);
 		display: block;
 		position: fixed;
 		inset-inline: 0;
-		top: calc(var(--theme-navbar-height));
+		top: 0;
 		z-index: 2;
 	}
 
@@ -103,7 +103,6 @@ const breadcrumbs = await getPageBreadcrumb(Astro, lang);
 		color: var(--theme-text-lighter);
 	}
 	.content {
-		padding-top: calc(var(--theme-navbar-height) + var(--doc-padding-block));
 		padding-bottom: var(--doc-padding-block);
 		padding-inline: var(--min-spacing-inline);
 		width: 100%;
