--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -81,6 +81,7 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 				top: 0;
 				max-height: 100vh;
 				height: 100%;
+				transition: all 0.2s ease-in;
 			}
 
 			@media not screen and (min-width: 50em) {
@@ -93,10 +94,6 @@ if (isFallback) canonicalURL.pathname = canonicalURL.pathname.replace(`/${lang}/
 			}
 
 			@media (min-width: 50em) {
-				.sidebar {
-					padding-top: var(--theme-navbar-height);
-				}
-
 				#left-sidebar {
 					display: block;
 					padding-inline-start: 0.25rem;
