feature: add links

--- a/src/layouts/HomepageLayout.astro
+++ b/src/layouts/HomepageLayout.astro
@@ -33,13 +33,13 @@ import CardBase from 'azion-webkit/cardbaseclickable';
 	
 <HeroBlockBase
     title="Welcome to Azion Docs"
-    description="Azion is the full-stack edge computing platform that simplifies how you build,  secure, and scale modern applications."
+    description="Azion is the full-stack edge computing platform that simplifies how you build, secure, and scale modern applications."
     display="flex"
     align="center"
     isCentralized=true
 >
     <Fragment slot="actions">
-        <LinkButton link="https://www.azion.com/en/documentation/products/get-started/" label="Get started" severity="primary" target="_blank" />
+        <LinkButton link="https://www.azion.com/en/documentation/products/get-started/" label="Get started" severity="primary" />
     </Fragment>
 </HeroBlockBase>
 
@@ -51,49 +51,48 @@ import CardBase from 'azion-webkit/cardbaseclickable';
     isCentralized=true
 >
 <Fragment slot="actions">
-        <CardBase>
+        <CardBase link = "https://console.azion.com/create/nextjs/next-static-boilerplate">
             <Fragment slot="actions">
                 Next
             </Fragment>
         </CardBase>
 
-        <CardBase>
+        <CardBase link = "https://console.azion.com/create/vue/vue-boilerplate">
             <Fragment slot="actions">
                 Vue
             </Fragment>
         </CardBase>
 
-        <CardBase>
+        <CardBase link = "https://console.azion.com/create/react/react-boilerplate">
             <Fragment slot="actions">
                React
             </Fragment>
         </CardBase>
 
-        <CardBase>
+        <CardBase link = "https://console.azion.com/create/angular/angular-boilerplate">
             <Fragment slot="actions">
                 Angular
             </Fragment>
         </CardBase>
 
-        <CardBase>
+        <CardBase link = "https://console.azion.com/create/astro/astro-boilerplate">
             <Fragment slot="actions">
                 Astro
             </Fragment>
         </CardBase>
     </Fragment>
     <Fragment slot="content">
-    <LinkButton link="https://www.azion.com/en/documentation/products/marketplace/templates/#application-development" label="More frameworks" severity="primary" target="_blank" />
+    <LinkButton link="https://www.azion.com/en/documentation/products/marketplace/templates/#application-development" label="More frameworks" severity="primary" />
     </Fragment>
 
 </ContentSection>
 
 <ContentSection
-    title="Find the solution that fits you better"
     position="left"
     grid=true
     isCentralized=true
     description = "Discover tailored solutions for your specific use cases and business needs."
-    title = "Section 4"
+    title = "Find the solution that fits you better"
 position = "left"
 grid = "true"
 isCentralized = "true"
@@ -123,7 +122,7 @@ isCentralized = "true"
         </CardBase>
 
         <CardBase
-        link = "Implement Serverless Architecture with Azion">
+        link = "https://www.azion.com/en/documentation/architectures/edge-application/serverless-applications/">
             <Fragment slot="actions">
               Implement Serverless Architecture with Azion
             </Fragment>
@@ -131,7 +130,7 @@ isCentralized = "true"
     </Fragment>
 
     <Fragment slot="content">
-    <LinkButton link="https://www.azion.com/en/documentation/architectures/" label="View All Use Cases" severity="primary" target="_blank" />
+    <LinkButton link="https://www.azion.com/en/documentation/architectures/" label="View All Use Cases" severity="primary" />
     </Fragment>
 
 </ContentSection>
@@ -146,14 +145,14 @@ isCentralized = "true"
 
     <Fragment slot="actions">
         <CardBase
-        link = "https://www.azion.com/en/documentation/architectures/edge-application/application-acceleration/">
+        link = "https://console.azion.com/">
             <Fragment slot="actions">
               Azion Console
             </Fragment>
         </CardBase>
 
         <CardBase
-        link = "https://www.azion.com/en/documentation/architecture/bot-management/protect-your-applications-with-bot-management/"
+        link = "https://www.azion.com/en/documentation/products/azion-cli/overview/"
         >
             <Fragment slot="actions">
              Azion CLI
@@ -161,14 +160,14 @@ isCentralized = "true"
         </CardBase>
 
         <CardBase
-        link = "https://www.azion.com/en/documentation/architecture/edge-firewall/web-application-and-api-protection-waap/">
+        link = "https://api.azion.com/">
             <Fragment slot="actions">
               Azion API
             </Fragment>
         </CardBase>
 
         <CardBase
-        link = "Implement Serverless Architecture with Azion">
+        link = "https://www.azion.com/en/documentation/products/terraform-provider/">
             <Fragment slot="actions">
              Azion Terraform Provider
             </Fragment>
@@ -186,14 +185,14 @@ isCentralized = "true"
 
     <Fragment slot="actions">
         <CardBase
-        link = "https://www.azion.com/en/documentation/architectures/edge-application/application-acceleration/">
+        link = "https://www.azion.com/en/documentation/products/guides/build/overview/">
             <Fragment slot="actions">
               Build
             </Fragment>
         </CardBase>
 
         <CardBase
-        link = "https://www.azion.com/en/documentation/architecture/bot-management/protect-your-applications-with-bot-management/"
+        link = "https://www.azion.com/en/documentation/products/store/overview/"
         >
             <Fragment slot="actions">
              Store
@@ -201,20 +200,20 @@ isCentralized = "true"
         </CardBase>
 
         <CardBase
-        link = "https://www.azion.com/en/documentation/architecture/edge-firewall/web-application-and-api-protection-waap/">
+        link = "https://www.azion.com/en/documentation/products/secure/overview/">
             <Fragment slot="actions">
               Secure
             </Fragment>
         </CardBase>
 
         <CardBase
-        link = "Implement Serverless Architecture with Azion">
+        link = "https://www.azion.com/en/documentation/products/deploy/overview/">
             <Fragment slot="actions">
              Deploy
             </Fragment>
         </CardBase>
         <CardBase
-        link = "Implement Serverless Architecture with Azion">
+        link = "https://www.azion.com/en/documentation/products/observe/overview/">
             <Fragment slot="actions">
              Observe
             </Fragment>
@@ -229,8 +228,8 @@ isCentralized = "true"
     isCentralized=true
 >
     <Fragment slot="actions">
-        <LinkButton link="https://www.azion.com/en/documentation/products/release-notes/" label="Go to Release Notes" severity="primary" target="_blank" />
-        <LinkButton link="" label="Join the Community" severity="secondary" target="_blank" />
+        <LinkButton link="https://www.azion.com/en/documentation/products/release-notes/" label="Go to Release Notes" severity="primary" />
+        <LinkButton link="" label="Join the Community" severity="secondary" />
     </Fragment>
 </HeroBlockBase>
 )}
